--- a/src/components/styles/loading.css
+++ b/src/components/styles/loading.css
@@ -1,24 +1,78 @@
-.spinner {
-    background-image: linear-gradient(rgb(186, 66, 255) 35%, rgb(0, 225, 255));
-    width: 100px;
-    height: 100px;
-    animation: spinning82341 1.7s linear infinite;
-    text-align: center;
-    border-radius: 50px;
-    filter: blur(1px);
-    box-shadow: 0px -5px 20px 0px rgb(186, 66, 255), 0px 5px 20px 0px rgb(0, 225, 255);
+.loader {
+    position: relative;
+    width: 108px;
+    display: flex;
+    justify-content: space-between;
 }
 
-.spinner1 {
-    background-color: rgb(36, 36, 36);
-    width: 100px;
-    height: 100px;
-    border-radius: 50px;
-    filter: blur(10px);
+.loader::after,
+.loader::before {
+    content: '';
+    display: inline-block;
+    width: 48px;
+    height: 48px;
+    background-color: #FFF;
+    background-image: radial-gradient(circle 14px, #0d161b 100%, transparent 0);
+    background-repeat: no-repeat;
+    border-radius: 50%;
+    animation: eyeMove 10s infinite, blink 10s infinite;
 }
 
-@keyframes spinning82341 {
-    to {
-        transform: rotate(360deg);
+@keyframes eyeMove {
+
+    0%,
+    10% {
+        background-position: 0px 0px
+    }
+
+    13%,
+    40% {
+        background-position: -15px 0px
+    }
+
+    43%,
+    70% {
+        background-position: 15px 0px
+    }
+
+    73%,
+    90% {
+        background-position: 0px 15px
+    }
+
+    93%,
+    100% {
+        background-position: 0px 0px
+    }
+}
+
+@keyframes blink {
+
+    0%,
+    10%,
+    12%,
+    20%,
+    22%,
+    40%,
+    42%,
+    60%,
+    62%,
+    70%,
+    72%,
+    90%,
+    92%,
+    98%,
+    100% {
+        height: 48px
+    }
+
+    11%,
+    21%,
+    41%,
+    61%,
+    71%,
+    91%,
+    99% {
+        height: 18px
     }
 }
